hatalar-düzeltildi